# test_casadi

./: 0_nlp_basic.cpp  1_cmp_pgd_ex.cpp  2_test_largeProb copy.cpp  3_multiple_shooting.cpp  3_rosenbrock.cpp  4_rosenbrock.cpp  CMakeLists.txt  rosenbrock.h  rosenbrock.py
PGD_example/: PGD_example.cpp  nonmonotone_APG.m
casadi_api_a_test/: casadi_api_a_test.cpp  casadi_api_a_test.hpp
mfiles/: casadi_plot.m  load_all.asv  load_all.m  rosenbrock_data.mat  rosenbrock_result.m  sol_rosenbrock.m
mfiles/casadi_ex/: race_car.m  rosenbrock.m
mfiles/mat/: rosenbrock_constraint_1.mat  rosenbrock_constraint_2.mat  rosenbrock_contour.mat  rosenbrock_optimal_solution.mat
mfiles/pgd/: fHistory.m
